Update .gitignore to correct folder names and file extensions

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ shots/
 #Extension App-file
 *.app
 #Rapid Application Development File
-rad.jschaturbate
+wwww.chaturbate.com
 
 #Translation Base-file
 *.g.xlf
@@ -22,3 +22,4 @@ rad.jschaturbate
 *.flf
 #Test results file
 TestResults.xml
+
